fix lottie load + sonal content switch

--- a/cardsofreminiscence.html
+++ b/cardsofreminiscence.html
@@ -23,8 +23,10 @@
     <div class="main_column">
         <div class="header_spacer"></div>
         <div class="sticky_wrapper">
-            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://lottie.host/fcf29a1d-2223-4e6e-b078-d6f3b28b0ce1/vju5XbBvik.json"  background="transparent"  speed="1"  style="width: 100%; padding-top: 20px; opacity: 80%;"  loop  autoplay></lottie-player>
+            <div style="height: 100px">
+                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                <lottie-player src="https://lottie.host/fcf29a1d-2223-4e6e-b078-d6f3b28b0ce1/vju5XbBvik.json"  background="transparent"  speed="1"  style="width: 100%;  opacity: 80%;"  loop  autoplay></lottie-player>
+            </div>
             <div style="margin-top: 100px; margin-left: 20%; margin-bottom: 100px;">
                 <div onclick="location.href='cardsofreminiscence.html';" class="button_wrapper" style="color: red">
                     <h4>>01</h4>
