--- a/sonal.html
+++ b/sonal.html
@@ -59,14 +59,12 @@
     </div>
     <div class="main_column">
         <div class="project_img_wrapper">
-            <img src="assets/cardsofreminiscence/CardsofReminiscence_Header.png" alt="" class="project_img">
-            <img src="assets/cardsofreminiscence/gifgreybackground.gif" alt="" class="project_img">
-            <img src="assets/cardsofreminiscence/coh_playing_group.png" alt="" class="project_img">
-            <video width="100%" controls poster="assets/cardsofreminiscence/cor_videothumbnail.jpg" class="project_img">
-                <source src="assets/cardsofreminiscence/coh_ffdvideo.mp4" type="video/mp4">
-              </video>
-            <img src="assets/cardsofreminiscence/cor_allcards_grid.png" alt="" class="project_img">
-            <img src="assets/cardsofreminiscence/cor_usertest_tweeluik.png" alt="" class="project_img">
+            <img src="assets/sonal/Cover photo.jpeg" alt="" class="project_img">
+            <img src="assets/sonal/Cover photo.jpeg" alt="" class="project_img">
+            <img src="assets/sonal/Cover photo.jpeg" alt="" class="project_img">
+            <img src="assets/sonal/Cover photo.jpeg" alt="" class="project_img">
+            <img src="assets/sonal/Cover photo.jpeg" alt="" class="project_img">
+            
             <hr>
             <div>
                 <p class="p_ref"><b>Related literature</b></p>
