--- a/cardsofreminiscence.html
+++ b/cardsofreminiscence.html
@@ -23,7 +23,7 @@
     <div class="main_column">
         <div class="header_spacer"></div>
         <div class="sticky_wrapper">
-            <div style="height: 100px">
+            <div style="height: 100px;  ">
                 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
                 <lottie-player src="https://lottie.host/fcf29a1d-2223-4e6e-b078-d6f3b28b0ce1/vju5XbBvik.json"  background="transparent"  speed="1"  style="width: 100%;  opacity: 80%;"  loop  autoplay></lottie-player>
             </div>
